--- a/la-wokr/la-9.25work1.html
+++ b/la-wokr/la-9.25work1.html
@@ -61,7 +61,7 @@
 			/*身体*/
 			
 			#la {
-				margin-left: 540px;
+				margin: 0 auto;
 				margin-top: 30px;
 				width: 884px;
 				height: 774px;
