--- a/LA-9.25work (2).html
+++ b/LA-9.25work (2).html
@@ -47,7 +47,7 @@
         text-align: right;
     }
     li:nth-child(odd):after {
-        content: ':电竞宏孩儿';
+        content: ':爱你';
         font-size: 20px;
         color: red;
     }
@@ -55,7 +55,7 @@
         text-align: left;
     }
     li:nth-child(even):before {
-        content: '送终鸡:';
+        content: '我也爱你:';
         font-size: 20px;
         color: blue;
     }
