--- a/la-9.29word.html
+++ b/la-9.29word.html
@@ -33,13 +33,13 @@
 				}
 			}
 			btn.onclick = function() {
-				if(y.value == '') {
+				if(inp.value == '') {
 					span.innerHTML = '用户名不能为空';
-				} else if(Name.indexOf(y.value) != -1) {
+				} else if(Name.indexOf(inp.value) != -1) {
 					span.innerHTML = '用户名重复';
-				} else if(m.value == '') {
+				} else if(inp1.value == '') {
 					span1.innerHTML = '密码不能为空';
-				} else if(m.value.length < 6) {
+				} else if(inp1.value.length < 6) {
 
 				} else {
 					alert('注册成功');
