--- a/10.31/1.html
+++ b/10.31/1.html
@@ -57,14 +57,14 @@
     </ul>
     <ul>
        
-        <li>华为</li>
+        <li><input name="one" type="checkbox">华为</li>
         <li>1000.00</li>
         <li class="num"><input name="num" type="text" value="1">
         <li class="price">1000.00</li>
     </ul>
     <ul>
         
-        <li>小米</li>
+        <li><input name="one" type="checkbox">小米</li>
         <li>2000.00</li>
         <li class="num"> <input name="num" type="text" value="1"> 
         <li class="price">2000.00</li>
